2009-04-02  Roland McGrath  <roland@redhat.com>

	* Makefile.am (noinst_HEADERS): Add dwarfstrings.h here.
	(dwarflint_SOURCES): Add dwarflint-expected.hh and dwarflint.h here.
	(noinst_HEADERS): Add expr_opcodes.h too.

2009-03-24  Roland McGrath  <roland@redhat.com>

	* Makefile.am (libdwplusplus_SOURCES): Variable removed.
	(dwarfcmp_SOURCES, dwarflint_SOURCES): Don't use it.
	(libdwpp): New variable.
	(dwarfcmp_LDADD, dwarflint_LDADD): Use it.

2009-03-05  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Add --nohl command line switch.

2009-01-28  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Coding style cleanups.
	(found_hole): Tolerate zero-padding to given alignment.

2009-01-27  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Implement validation of .debug_ranges and
	references from .debug_info to .debug_ranges.

2009-01-27  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Check that the base address selection entry
	actually changes base address.

2009-01-27  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Match the way dwarflint reports offsets with the
	way elfutils does it.

2009-01-26  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c (check_aranges_structural): Check that each CU is
	referenced from one aranges section only.
	(check_pub_structural): Likewise for pubnames and pubtypes.
	(read_ctx_read_uleb128): Allow ten-byte ULEB128.

2009-01-23  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c (check_debug_info_structural): Check that all CUs
	have the same address size.

2009-01-17  Roland McGrath  <roland@redhat.com>

	* expr_opcodes.h: Fix DW_OP_deref entry.
	Add DW_OP_GNU_push_tls_address, DW_OP_GNU_uninit.

2009-01-17  Petr Machata  <pmachata@redhat.com>

	* dwarflint.c: Better location handling: references now carry
	along where did they originate (i.e. which section, offset, etc.),
	all messages are location-aware.
	(struct where): New structure that captures location inside the